Fix menu to work better on mobile

--- a/hscc.css
+++ b/hscc.css
@@ -56,7 +56,16 @@ footer, ul, hgroup,
 
 nav ul {
     max-width: 80%;
-    columns: 3;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+nav ul li {
+    width: 32%;
+    margin: 1px;
 }
 
 ul {
@@ -411,4 +420,20 @@ ul.format-list p {
 #policy-links li {
     margin: 1em;
     font-size: 1.2em;
+}
+
+
+@media screen and (max-width : 768px) {
+    nav ul {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    nav ul li {
+        width: 100%;
+    }
+
+
 }
